# wqf7009-xai-pneumonia

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: README.md
models/: resnet152_frozen_10ep_1767266526_best.pth  resnet152_unfrozen_10ep_1767265644_best.pth  simplecnn_baseline_10ep_1767264997_best.pth  vgg16_frozen_10ep_1767266050_best.pth  vgg16_unfrozen_10ep_1767265306_best.pth
runs/resnet152_frozen_10ep_1767266526/: events.out.tfevents.1767266526.6c77474a8691.21338.0
runs/resnet152_frozen_10ep_1767266526/Accuracy_Train/: events.out.tfevents.1767266551.6c77474a8691.21338.5
runs/resnet152_frozen_10ep_1767266526/Accuracy_Val/: events.out.tfevents.1767266551.6c77474a8691.21338.6
runs/resnet152_frozen_10ep_1767266526/F1_Train/: events.out.tfevents.1767266551.6c77474a8691.21338.3
runs/resnet152_frozen_10ep_1767266526/F1_Val/: events.out.tfevents.1767266551.6c77474a8691.21338.4
runs/resnet152_frozen_10ep_1767266526/Loss_Train/: events.out.tfevents.1767266551.6c77474a8691.21338.1
runs/resnet152_frozen_10ep_1767266526/Loss_Val/: events.out.tfevents.1767266551.6c77474a8691.21338.2
runs/resnet152_unfrozen_10ep_1767265644/: events.out.tfevents.1767265644.6c77474a8691.16053.0
runs/simplecnn_baseline_10ep_1767264997/: events.out.tfevents.1767264997.6c77474a8691.11798.0
runs/vgg16_frozen_10ep_1767266050/: events.out.tfevents.1767266050.6c77474a8691.18548.0
runs/vgg16_unfrozen_10ep_1767265306/: events.out.tfevents.1767265306.6c77474a8691.13857.0
src/wqf7009_a3/: dataset.py  eval.py  infer.py  loss.py  main.py  trainer.py  utils.py  xai.py
(+28 files in other folders)
